supress a warning from the sqlite-jdbc library